Cleaning up pom